Fix dialog color scheme in dark mode

--- a/lektor_tekir/static/tekir-admin.css
+++ b/lektor_tekir/static/tekir-admin.css
@@ -360,6 +360,7 @@ a.button {
     --color-link: var(--color-link-dark);
   }
 
+  dialog,
   input {
     color-scheme: dark;
   }
